--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <title> My Site </title>
 </head>
 <body>
-  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
-
+  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js">
+  </script>
   <p id="text">jQuery is so cool. It lets me add text to my page programmatically. </p>  <script>
   <script src="js/script.js"></script>
 </body>
